samples/errors/Cycle2.tmpl
scala: test.Cycle2
purs: Test.Cycle2

import Cycle3

type X: Int
